# SGAL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/marching-cubes/: CMakeLists.txt  compute.shader  main.cpp  marching_cubes.cpp  triangulation.cpp
apps/perlin-noise-cubes/: CMakeLists.txt  main.cpp
apps/ray-trace/: CMakeLists.txt  main.cpp  transformed.shader.fragment  transformed.shader.vertex
bin-gen/: CMakeLists.txt  tempgen.cpp
cgen/prims/: outline_cube.rm  sphere.rm
cgen/shaders/: Default2D.shader  Default3D.shader  DefaultUI.shader
client/: CMakeLists.txt  cube.rm  main.cpp
client/res/models/Texture/: Thumbs.db
include/SGAL/: Graphics.h  SGAL.h  Utility.h  decl.h
include/SGAL/Graphics/: Animation.h  Camera.h  ComputeShader.h  Context.h  DrawTexture.h  DrawWindow.h  Drawable.h  Event.h  GL.h  LightArray.h  Math.h  Model.h  ModelArray.h  Primitives.h  RawModel.h  Shader.h  SingleModel.h  Sizable.h  Surface.h  Texture.h  UI.h  VertexArray.h  Window.h
include/SGAL/Graphics/Animation/: Anim.h  Animation.h  AnimationSequence.h  AnimationSystem.h
include/SGAL/Graphics/GL/: ArrayObject.h  BufferObject.h  Object.h
include/SGAL/Graphics/Math/: Instrins.h  Matrix.h  Transform.h  Vec.h
include/SGAL/Graphics/Primitives/: Primitives.h
include/SGAL/Graphics/UI/: Element.h  Rectangle.h
include/SGAL/Utility/: Color.h  Keyboard.h  Mouse.h  Serializer.h  Timer.h
include/SGL/: File.h  Graphics.h  Math.h  SGL.h  SimplexNoise.h
include/SGL/File/: CSVFile.h  File.h
include/SGL/Graphics/: Camera.h  Drawable.h  GL.h  Model.h  ModelArray.h  RawModel.h  RenderTexture.h  Shader.h  Surface.h  Text.h  Texture.h  Utility.h  Window.h
include/SGL/Graphics/GL/: GLData.h  VAO.h  VBO.h
include/SGL/Graphics/Text/: BitText.h  BitmapFont.h  Font.h
include/SGL/Graphics/Utility/: Clock.h  Mouse.h
include/SGL/Math/: Color.h  Matrix.h  Rect.h  Transform.h  Vec.h
lib/: compile.bat  main.cpp  shader.frag  shader.vert
prims/: plane.rm
scripts/: class.config  genprims.py  genshaders.py  line_counter.py  new_class.py
src/: CMakeLists.txt  Graphics.cpp  SimplexNoise.cpp  Utility.cpp
src/Graphics/: Animation.cpp  Camera.cpp  ComputeShader.cpp  Context.cpp  DrawTexture.cpp  DrawWindow.cpp  Event.cpp  GL.cpp  LightArray.cpp  Math.cpp  Model.cpp  ModelArray.cpp  Primitives.cpp  RawModel.cpp  RenderTexture.cpp  Shader.cpp  SingleModel.cpp  Sizable.cpp  Surface.cpp  Text.cpp  Texture.cpp  UI.cpp  Utility.cpp  VertexArray.cpp  Window.cpp
src/Graphics/Animation/: AnimationSequence.cpp  AnimationSystem.cpp
src/Graphics/GL/: ArrayObject.cpp  BufferObject.cpp  Object.cpp  VAO.cpp  VBO.cpp
src/Graphics/Math/: Instrins.cpp  Transform.cpp
src/Graphics/Text/: BitText.cpp  BitmapFont.cpp
src/Graphics/UI/: Rectangle.cpp
src/Graphics/Utility/: Clock.cpp  Mouse.cpp
src/Graphics/WinPlatform/: win32Window.cpp
src/Utility/: Keyboard.cpp  Mouse.cpp  Serializer.cpp  Timer.cpp
